--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">SixCat</string>
     <string name="title_profile_list">ProfileList</string>
     <string name="title_profile_detail">Profile Detail</string>
+    <string name="title_activity_profile_register">ProfileRegisterActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_profile_edit">ProfileEditActivity</string>
 
 </resources>
