--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_profile_edit">ProfileEditActivity</string>
 
+    <string name="tag_key_id">100</string>
+    <string name="tag_key_sequence">101</string>
 </resources>
