ProfileEdit画面で画像をDBに保存＆DBから読み込み。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
 
     <string name="tag_key_id">100</string>
     <string name="tag_key_sequence">101</string>
+    <string name="tag_key_type">102</string>
+    <string name="tag_image_file_path">103</string>
 </resources>
