--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,15 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_profile_edit">ProfileEditActivity</string>
 
+    <string name="menu_button_register_profile">+新規</string>
+    <string name="menu_button_edit_profile">編集</string>
+    <string name="menu_button_appointment_list">予定一覧</string>
+    <string name="menu_button_register_appointment">予定作成</string>
+
+    <string name="menu_button_save">保存</string>
+    <string name="menu_button_delete">削除</string>
+    <string name="menu_button_cancel">キャンセル</string>
+
     <string name="tag_key_id">100</string>
     <string name="tag_key_sequence">101</string>
     <string name="tag_key_type">102</string>
