fixed #37 fixed #38 選択項目の実装
Spinnerを追加して、DBから項目を読んでセットして、選択してください的なのを先頭につけて、保存したり表示したり・・・。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="tag_key_sequence">101</string>
     <string name="tag_key_type">102</string>
     <string name="tag_image_file_path">103</string>
+
+    <string name="option_default_string">選択してください</string>
 </resources>
