--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SixCat</string>
-    <string name="title_profile_list">ProfileList</string>
-    <string name="title_profile_detail">Profile Detail</string>
-    <string name="title_activity_profile_register">ProfileRegisterActivity</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">やまたのおろち</string>
+    <string name="title_profile_list">カルテ一覧</string>
+    <string name="title_profile_detail">カルテ詳細</string>
+    <string name="title_activity_profile_register">カルテ作成</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_profile_edit">ProfileEditActivity</string>
-
+    <string name="title_activity_profile_edit">カルテ編集</string>
     <string name="menu_button_register_profile">+新規</string>
     <string name="menu_button_edit_profile">編集</string>
     <string name="menu_button_appointment_list">予定一覧</string>
     <string name="menu_button_register_appointment">予定作成</string>
-
     <string name="menu_button_save">保存</string>
     <string name="menu_button_delete">削除</string>
     <string name="menu_button_cancel">キャンセル</string>
-
     <string name="tag_key_id">100</string>
     <string name="tag_key_sequence">101</string>
     <string name="tag_key_type">102</string>
     <string name="tag_image_file_path">103</string>
-
     <string name="option_default_string">選択してください</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="delete_confirm_dialog_title">確認</string>
+
+
 </resources>
